fix: assignment module